--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ol>
     <li>wix</li>
       <li>nflnetwork</li>
-      <li>youtube</li>
+     <li><a href="https://github.com">This is a link to GitHub!</a></li>
     </ol>
     
    
